force-app/main/default/objects/Order/fields/Account_Reference_Code__c.field-meta.xml
<CustomField>
    <fullName>Account_Reference_Code__c</fullName>
    <label>Account Reference Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>