force-app/main/default/objects/Order/fields/Billing_Blk_No__c.field-meta.xml
<CustomField>
    <fullName>Billing_Blk_No__c</fullName>
    <label>Billing Blk No</label>
    <length>20</length>
    <type>Text</type>
</CustomField>