force-app/main/default/objects/Order/fields/Billing_District__c.field-meta.xml
<CustomField>
    <fullName>Billing_District__c</fullName>
    <label>Billing District</label>
    <length>100</length>
    <type>Text</type>
</CustomField>