force-app/main/default/objects/Order/fields/Dealer_Sub_Dealer__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Sub_Dealer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dealer/Sub-Dealer</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please select active dealer/sub-dealer account.</errorMessage>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Dealer, Sub-dealer</value>
        </filterItems>
        <infoMessage>Please select active dealer/sub-dealer account.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>