force-app/main/default/objects/Order/fields/New_User_Sale__c.field-meta.xml
<CustomField>
    <fullName>New_User_Sale__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>First time order for the product by the account in the last 12 months.</inlineHelpText>
    <label>New User Sale</label>
    <type>Checkbox</type>
</CustomField>