force-app/main/default/objects/Order/fields/noParent__c.field-meta.xml
<CustomField>
    <fullName>noParent__c</fullName>
    <formula>ISBLANK(Parent_Order__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>noParent</label>
    <type>Checkbox</type>
</CustomField>