force-app/main/default/objects/Order/fields/Order_Channel__c.field-meta.xml
<CustomField>
    <fullName>Order_Channel__c</fullName>
    <label>Order Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>Telesales</fullName>
            </value>
            <value>
                <fullName>Government Purchase</fullName>
            </value>
            <value>
                <fullName>Webinar</fullName>
            </value>
            <value>
                <fullName>Phone Call</fullName>
            </value>
            <value>
                <fullName>Face to Face</fullName>
                <default>true</default>
                <label>Face to Face</label>
            </value>
            <value>
                <fullName>Marketing Event</fullName>
            </value>
            <value>
                <fullName>Instant Messenger</fullName>
            </value>
            <value>
                <fullName>Social Media</fullName>
            </value>
            <value>
                <fullName>N.A</fullName>
            </value>
            <value>
                <fullName>Facebook Message</fullName>
                <isActive>false</isActive>
                <label>Facebook Message</label>
            </value>
            <value>
                <fullName>Instagram</fullName>
                <isActive>false</isActive>
                <label>Instagram</label>
            </value>
            <value>
                <fullName>Line</fullName>
                <isActive>false</isActive>
                <label>Line</label>
            </value>
            <value>
                <fullName>Whatsapp</fullName>
                <isActive>false</isActive>
                <label>Whatsapp</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>