force-app/main/default/objects/Order/fields/Order_Product_Count__c.field-meta.xml
<CustomField>
    <fullName>Order_Product_Count__c</fullName>
    <label>Order Product Count</label>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>