force-app/main/default/objects/Order/validationRules/date_only_in_draft.validationRule-meta.xml
<ValidationRule>
    <fullName>date_only_in_draft</fullName>
    <active>true</active>
    <description>Can only change Date when status Draft</description>
    <errorConditionFormula>AND(
NOT(
OR(
$Profile.Name = &quot;Local Admin&quot;,
$Profile.Name = &quot;System Administrator&quot;
)
),
ISCHANGED(EffectiveDate),
NOT(ISPICKVAL(Status, &quot;Draft&quot;))
)</errorConditionFormula>
    <errorMessage>Start date can only be change in Draft Status</errorMessage>
</ValidationRule>