force-app/main/default/objects/Order/validationRules/dealer_field_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>dealer_field_mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(Status) &amp;&amp; ISPICKVAL(Status, &apos;Delivered&apos;) &amp;&amp;  Dealer_Sub_Dealer__c == NULL</errorConditionFormula>
    <errorDisplayField>Dealer_Sub_Dealer__c</errorDisplayField>
    <errorMessage>Please fill in the Dealer/Sub-Dealer field</errorMessage>
</ValidationRule>