force-app/main/default/objects/Order/validationRules/order_type_field_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>order_type_field_mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(Status) &amp;&amp; ISPICKVAL(Status, &apos;Delivered&apos;) &amp;&amp; ISPICKVAL(Type, &quot;&quot;)</errorConditionFormula>
    <errorDisplayField>Type</errorDisplayField>
    <errorMessage>Please fill in the OrderType field</errorMessage>
</ValidationRule>