force-app/main/default/objects/Order/validationRules/order_type_subdealer_check.validationRule-meta.xml
<ValidationRule>
    <fullName>order_type_subdealer_check</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Type, &apos;Sub-Dealer Order&apos;),
NOT(ISPICKVAL(Account.Type,&apos;Sub-dealer&apos;))
)</errorConditionFormula>
    <errorDisplayField>Type</errorDisplayField>
    <errorMessage>Account Type other then Sub-dealer can&apos;t used Order Type &quot;Sub-Dealer Order&quot;</errorMessage>
</ValidationRule>