force-app/main/default/objects/Order/validationRules/pending_order_need_products.validationRule-meta.xml
<ValidationRule>
    <fullName>pending_order_need_products</fullName>
    <active>true</active>
    <errorConditionFormula>And(Order_Product_Count__c &lt;= 0,ISPICKVAL(Status ,&apos;Pending&apos;) )</errorConditionFormula>
    <errorMessage>An order must have at least one product.</errorMessage>
</ValidationRule>