force-app/main/default/objects/Order/validationRules/status_cant_change_to_draft.validationRule-meta.xml
<ValidationRule>
    <fullName>status_cant_change_to_draft</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(
OR(
$Profile.Name = &quot;Local Admin&quot;,
$Profile.Name = &quot;System Administrator&quot;
)
),
ISCHANGED(Status),
ISPICKVAL(Status, &quot;Draft&quot;)
)</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>Can&apos;t change back status to Draft</errorMessage>
</ValidationRule>