force-app/main/default/objects/Order/listViews/All_Delivered_Orders.listView-meta.xml
<ListView>
    <fullName>All_Delivered_Orders</fullName>
    <booleanFilter>1 AND 2</booleanFilter>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>ORDERS.TYPE</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>Contact__c</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>ORDERS.TOTAL_AMOUNT</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Order_Channel__c</columns>
    <columns>Dealer_Sub_Dealer__c</columns>
    <columns>Campaign__c</columns>
    <columns>Est_Delivery_Date__c</columns>
    <columns>Delivery_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ORDER.BILLING_COUNTRY_CODE</field>
        <operation>equals</operation>
        <value>AU,NZ</value>
    </filters>
    <filters>
        <field>Delivery_Date__c</field>
        <operation>greaterThan</operation>
        <value>4/1/2026</value>
    </filters>
    <label>All Delivered Orders</label>
</ListView>