force-app/main/default/objects/Order/listViews/My_Pending_Orders.listView-meta.xml
<ListView>
    <fullName>My_Pending_Orders</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>ORDERS.TYPE</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>Contact__c</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>Order_Channel__c</columns>
    <columns>Dealer_Sub_Dealer__c</columns>
    <columns>Campaign__c</columns>
    <columns>Est_Delivery_Date__c</columns>
    <columns>Delivery_Date__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>ORDERS.STATUS</field>
        <operation>equals</operation>
        <value>Pending</value>
    </filters>
    <label>My Pending Orders</label>
</ListView>